src/scss/common.scss
@import "~./_vars";
@import "~./_mixins";

* { padding: 0px; margin: 0px; border: 0px; box-sizing: border-box; }
html, body { height: 100%; }

body {
	font-family: 'Inter'; @include text-common; color: var(--color-text-primary); overflow: hidden; background: var(--color-bg-primary);
	-webkit-font-smoothing: antialiased; backface-visibility: hidden; transform-style: flat; overscroll-behavior: none; scrollbar-gutter: stable;
}
body.colResize { cursor: col-resize !important; }
body.colResize * { cursor: col-resize !important; user-select: none !important; }
body.rowResize { cursor: row-resize !important; }
body.rowResize * { cursor: row-resize !important; user-select: none !important; }
body.wResize { cursor: w-resize !important; }
body.eResize { cursor: e-resize !important; }
body.grab, body.isDragging { cursor: grab !important; }

:focus { outline: 0px; }
::selection { background-color: var(--color-system-selection); }

@keyframes rotate {
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus
input:-webkit-autofill, 
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus { transition: background-color 5000s linear 0s; }
input, textarea, select { font-family: 'Inter'; }

#root { height: 100%; }
#appContainer { display: flex; flex-direction: column; height: 100%; }
#selection { flex-grow: 1; overflow: hidden; }
.swiper-navigation-icon { display: none !important; }

#root-loader { 
	position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; background: var(--color-bg-primary); z-index: 10000;
	transition: opacity 0.3s $easeInQuint; 
}
#root-loader {
	.inner { 
		width: 120px; text-align: center; position: absolute; transform: translate3d(-50%,-50%,0px); display: flex; flex-direction: column; gap: 6px 0px;
		left: 50%; top: 50%;
	}
	.anim { opacity: 1; transform: scale3d(1,1,1); transition-duration: 0.3s; transition-property: opacity, transform; transition-timing-function: linear(0, 0.008 1.1%, 0.034 2.3%, 0.134 4.9%, 0.264 7.3%, 0.683 14.3%, 0.797 16.5%, 0.89 18.6%, 0.967 20.7%, 1.027 22.8%, 1.073 25%, 1.104 27.3%, 1.123 30.6%, 1.119 34.3%, 1.018 49.5%, 0.988 58.6%, 0.985 65.2%, 1 84.5%, 1); }
	.anim.from { opacity: 0; transform: scale3d(0.7,0.7,1); }
	.anim.to { opacity: 0; transform: translate3d(0px,-20px,0px); }

	.logo { width: 120px; height: 24px; background: url('~img/logo/black.svg') no-repeat; background-size: 100%; }
	.version { @include text-small; transition-delay: 0.15s; }
}

#globalFade { 
	position: fixed; z-index: 23; background: var(--color-bg-primary); right: 0px; top: 0px; width: 100%; height: 100%; display: none; opacity: 0; 
	transition: opacity 0.3s $easeInQuint;
}
#globalFade {
	#loader { position: absolute; right: 0px; top: 0px; width: 100%; height: 100%; width: 100%; }
}
#globalFade.show { opacity: 1; }
#graphPreview { position: fixed; z-index: 1000; left: 0px; top: 0px; }

#mainAnimation { display: none; }

.onboardingDimmer { content: ''; position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(0,0,0,0.3); -webkit-app-region: no-drag; z-index: 999; pointer-events: none; }

.ReactVirtualized__List { overscroll-behavior: none; }

.customScrollbar {
	::-webkit-scrollbar, &::-webkit-scrollbar { width: 10px; height: 10px; }
	::-webkit-scrollbar-thumb, &::-webkit-scrollbar-thumb { background: transparent; border-radius: 5px; }
	::-webkit-scrollbar-corner, &::-webkit-scrollbar-corner { background-color: transparent; }
	::-webkit-scrollbar-button, &::-webkit-scrollbar-button { display: none; }
}
.customScrollbar:hover {
	::-webkit-scrollbar-thumb, &::-webkit-scrollbar-thumb { background: var(--color-control-active); }
}

.dn { display: none !important; }
.txt { vertical-align: middle; display: inline-block; line-height: 1; }
.flex { display: flex; }
.nw { white-space: nowrap; }
.passThrough { pointer-events: none; }
.rel { position: relative; }
.disabled { opacity: 0.5; cursor: default !important; }
.dis { cursor: default !important; }
.isReadonly { -webkit-user-modify: unset !important; cursor: default !important; }
.no-br { border-radius: unset !important; }
.noAnimation { transition: none !important; }
.over, .overPopup { overflow: hidden !important; }
.empty, .emptyText { color: var(--color-text-tertiary); }
.isDone { color: var(--color-text-secondary); }
.placeholder { 
	pointer-events: none; color: var(--color-text-tertiary); position: absolute; left: 0px; top: 0px; z-index: 0; width: 100%; height: 100%; cursor: text; 
	overflow: hidden; white-space: nowrap; text-overflow: ellipsis;
}
::-webkit-input-placeholder { color: var(--color-text-tertiary) !important; }
.isBlurred { filter: blur(7px); }
.animationWord { display: inline-block; }
.isRtl { direction: rtl; }
.isOnboardingHidden { visibility: hidden; }

.fileWrap { position: relative; overflow: hidden; }
.fileWrap { 
	.input-file { position: absolute; left: 0px; top: 0px; opacity: 0; width: 100%; height: 100%; z-index: 100; padding: 0px; } 
}

.editableWrap { position: relative; }

a { color: var(--color-text-primary); }

.dropTarget.isOver.middle { background: var(--color-system-drop-zone) !important; }
.dropTarget.isOver.top { box-shadow: 0px -2px 0px var(--color-control-accent); }
.dropTarget.isOver.bottom { box-shadow: 0px 2px 0px var(--color-control-accent); }
.dropTarget.isOver.left { box-shadow: -2px 0px 0px var(--color-control-accent); }
.dropTarget.isOver.right { box-shadow: 2px 0px 0px var(--color-control-accent); }

/* DropTarget for Layout.Row */
.dropTarget.targetTop.isOver.top { box-shadow: 0px -2px 0px var(--color-control-accent) inset; }
.dropTarget.targetBot.isOver.bottom { box-shadow: 0px 2px 0px var(--color-control-accent) inset; }

/* Diff elements for history */
.diffAdd, .diffChange, .diffRemove { position: relative; }
.diffAdd::after, .diffChange::after, .diffRemove::after { content: ""; border-radius: inherit; opacity: 0.5; pointer-events: none; }
.diffAdd::after, .diffChange::after	{ position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 10; }
.diffRemove::after { position: relative; height: 30px; display: block; width: 100%; }
.diffAdd::after { background-color: var(--color-shape-highlight-add); }
.diffChange::after { background-color: var(--color-shape-highlight-change); }
.diffRemove::after { background-color: var(--color-shape-highlight-remove); }

.isSelectionSelected, .isKeyboardFocused { position: relative; }

.selectionTarget.isSelectionSelected::after,
.block.isSelectionSelected > .wrapContent > .selectionTarget::after,
.selectionTarget.isKeyboardFocused::after
{
	display: block; position: absolute; left: -2px; top: 0px; width: calc(100% + 4px); height: 100%; background-color: var(--color-system-selection);
	pointer-events: none; z-index: 10; content: ""; border-radius: 2px;
}

.brokenMedia { 
	@include text-common; position: relative; width: 100%; line-height: 20px; padding: 11px 13px; border-radius: 6px; border: solid 1px var(--color-shape-secondary); 
	color: var(--color-control-active); height: 44px;
}
.brokenMedia {
	img:before { 
		content: " "; display: block; position: absolute; left: 0px; top: 0px; height: 100%; width: 100%;
		background: var(--color-bg-primary); border-radius: inherit;
	}

	img:after { 
		content: "🔗" " Image is broken"; display: block; text-align: center; position: absolute; left: 0px; top: 0px; 
		@include text-overflow-nw; padding: 11px 13px; width: calc(100% - 26px); height: calc(100% - 22px);
		display: flex; align-items: center; justify-content: center;
	}
	
	.icon.resize { display: none; }
	.icon.download { display: none; }
}

@import "./debug";
@import "./font";
@import "./color";
@import "./component/common.scss";
@import "./page/common.scss";
@import "./block/common.scss";
@import "./form/common.scss";
@import "./list/common.scss";
@import "./widget/common.scss";
@import "./popup/common.scss";
@import "./menu/common.scss";
@import "./notification/common.scss";

@import "./media/print.scss";
@import "./theme/dark/common.scss";

html {
	&.isSingleTab {
		.pageWrapper { padding-top: 8px; }
		.subPageWrapper { padding: 0px; }
		.pageFlex { padding: 0px; }
	}

	&:not(.isSingleTab) {
		.sidebarPage.pageWidget > .body { padding-bottom: 0px; }
	}

	&.platformMac.isSingleTab {
		&:not(.isFullScreen) {
			#dragPanel {
				display: block; position: fixed; top: 0px; left: 0px; width: 100%; height: 52px; z-index: -1;
				user-select: none; pointer-events: all; background: var(--color-shape-primary); -webkit-app-region: drag;
			}

			.sidebar.isMinimal {
				.pageWrapper { padding-top: 52px; }
			}

			.sidebar:not(.isMinimal) {
				.sidebarPage.pageVault {
					> .head { height: 36px; margin-bottom: 8px; }
				}

				.sidebarPage.pageVault {
					> .head {
						.side.left {
							.name { display: none; }
						}
					}
				}
			}

			#header:not(.withSidebarTotalLeft) {
				> .side.left { padding-left: 88px; }
			}
		}
	}


	&.platformWindows {
		&.isSingleTab:not(.isFullScreen) {
			.sidebar {
				.pageWrapper { padding-top: 8px; }
			}
		}
	}

	&.platformLinux {
		body { overflow-y: auto; }

		&.isSingleTab:not(.isFullScreen) {
			.sidebar {
				.pageWrapper { padding-top: 8px; }
			}
		}
	}

	&.platformWindows, &.platformLinux {
		::-webkit-scrollbar { width: 10px; height: 10px; }
		::-webkit-scrollbar-thumb { background: var(--color-control-active); border-radius: 5px; }
		::-webkit-scrollbar-corner { background-color: transparent; }
		::-webkit-scrollbar-button { display: none; }
	}

	&.platformLinux {
		.sidebar {
			.subPageWrapper:not(.withSidebarLeft) {
				.sidebarPage {
					> .head {
						.side.left	{ padding-left: 36px; }
					}
				}
			}
		}
	}
}

